Affichage du radar avec moyennes de l'élève sélectionné et moyennes classe

--- a/designLogicielFinalV2.ui
+++ b/designLogicielFinalV2.ui
@@ -292,7 +292,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="pBValCalculMoy">
             <property name="text">
              <string>Valider</string>
             </property>
