--- a/designLogicielFinalV5.ui
+++ b/designLogicielFinalV5.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>2958</width>
-    <height>790</height>
+    <width>3148</width>
+    <height>1095</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -355,7 +355,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pBAjoutMatiere_2">
+           <widget class="QPushButton" name="pBAjoutMatiere">
             <property name="font">
              <font>
               <family>Showcard Gothic</family>
@@ -390,7 +390,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="pBAjoutMatiere">
+           <widget class="QPushButton" name="pBModifDonnees">
             <property name="font">
              <font>
               <family>Showcard Gothic</family>
@@ -2406,7 +2406,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>2958</width>
+     <width>3148</width>
      <height>21</height>
     </rect>
    </property>
